--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
         </activity>
         <activity android:name=".plugins.pump.danaRS.activities.PairingHelperActivity" />
         <activity android:name=".activities.HistoryBrowseActivity" />
-        <activity android:name=".plugins.general.stateviewer.StateDataActivity" />
+        <activity android:name=".plugins.hm.stateviewer.StateDataActivity" />
 
         <!-- Receive new BG readings from other local apps -->
         <receiver
